--- a/index.html
+++ b/index.html
@@ -133,7 +133,18 @@
       </div>
     </div>
   </section>
-  
+
+  <section id="sertifikat" class="py-20 px-6 bg-gray-100" data-aos="fade-up">
+    <div class="max-w-6xl mx-auto">
+      <h2 class="text-3xl font-semibold mb-12 text-center">Surat Tugas</h2>
+      <div class="grid md:grid-cols-2 gap-8">
+        <div class="bg-white rounded-xl shadow p-5">
+          <img src="img/surattugas.jpg" alt="Sertifikat 1" class="w-full h-40 object-contain mb-3">
+          <p class="font-semibold text-center">PT. Hisense International Indonesia 2025</p>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- Portofolio -->
   <section id="portfolio" class="py-20 px-6" data-aos="fade-up">
     <div class="max-w-6xl mx-auto">
@@ -275,4 +286,5 @@
 
 </body>
 </html>
+
 
