--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <p>Pengalaman</p>
         </div>
         <div class="bg-white p-6 rounded-xl shadow">
-          <h3 class="text-2xl font-bold text-blue-600">4+</h3>
+          <h3 class="text-2xl font-bold text-blue-600">5+</h3>
           <p>Sertifikat</p>
         </div>
       </div>
@@ -129,6 +129,10 @@
         <div class="bg-white rounded-xl shadow p-5">
           <img src="img/pkl.png" alt="Sertifikat 4" class="w-full h-40 object-contain mb-3">
           <p class="font-semibold text-center">Dinas Pendidikan & Kebudayaan - 2025</p>
+        </div>
+        <div class="bg-white rounded-xl shadow p-5">
+          <img src="img/dpm.jpg" alt="Sertifikat 4" class="w-full h-40 object-contain mb-3">
+          <p class="font-semibold text-center">Dewan Perwakilan Mahasiswa ( DPM ) Bendahara - 2025</p>
         </div>
       </div>
     </div>
@@ -286,5 +290,6 @@
 
 </body>
 </html>
+
 
 
