--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <!-- Portofolio -->
   <section id="portfolio" class="py-20 px-6" data-aos="fade-up">
     <div class="max-w-6xl mx-auto">
-      <h2 class="text-3xl font-semibold mb-12 text-center">Portofolio</h2>
+      <h2 class="text-3xl font-semibold mb-12 text-center">Website</h2>
       <div class="grid md:grid-cols-3 gap-8">
         <div class="bg-white rounded-xl shadow hover:shadow-xl transition">
           <img src="img/villa.png" alt="Project 1" class="rounded-t-xl w-full h-48 object-cover">
@@ -290,6 +290,7 @@
 
 </body>
 </html>
+
 
 
 
