--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="md:w-1/2 flex justify-center mt-8 md:mt-0">
                 <div
                     class="relative w-48 h-48 sm:w-64 sm:h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-white shadow-2xl dark:border-gray-300">
-                    <img src="img/foto.jpg" alt="Foto Profil" class="w-full h-full object-cover object-top">
+                    <img src="img/foto1.jpg" alt="Foto Profil" class="w-full h-full object-cover object-top">
                 </div>
             </div>
 
@@ -151,7 +151,7 @@
                 <!-- Foto Profil -->
                 <div class="md:w-2/5 flex justify-center">
                     <div class="rounded-2xl overflow-hidden shadow-xl aspect-[3/4] w-full max-w-xs">
-                        <img src="img/foto.jpg" alt="Foto Profil"
+                        <img src="img/foto1.jpg" alt="Foto Profil"
                             class="w-full h-full object-cover object-center hover:scale-105 transition-transform duration-300">
                     </div>
                 </div>
@@ -623,9 +623,9 @@
                 <div class="p-6">
                     <div class="flex flex-col lg:flex-row items-start lg:items-center gap-6">
                           <div class="lg:w-1/3">
-                            <img src="img/mubes.jpg" alt="Magang Perusahaan"
+                            <img src="img/mubes1.jpg" alt="Magang Perusahaan"
                                 class="w-full h-48 object-cover rounded-lg cursor-pointer zoom-image"
-                                onclick="openImageModal(this.src, 'Program Magang di Tech Company')">
+                                onclick="openImageModal(this.src, 'Mubes')">
                         </div>
                         <div class="lg:w-2/3">
                             <h3 class="text-xl sm:text-2xl font-bold mb-3 dark:text-white">Koordinator MUBES 2024
@@ -642,7 +642,7 @@
                 <div class="p-6">
                     <div class="flex flex-col lg:flex-row items-start lg:items-center gap-6">
                           <div class="lg:w-1/3">
-                            <img src="img/lkmm.jpg" alt=""
+                            <img src="img/lkmm1.jpg" alt=""
                                 class="w-full h-48 object-cover rounded-lg cursor-pointer zoom-image"
                                 onclick="openImageModal(this.src, 'lkmm')">
                         </div>
@@ -663,7 +663,7 @@
                         <div class="lg:w-1/3">
                             <img src="img/voli.jpg" alt="Magang Perusahaan"
                                 class="w-full h-48 object-cover rounded-lg cursor-pointer zoom-image"
-                                onclick="openImageModal(this.src, 'Program Magang di Tech Company')">
+                                onclick="openImageModal(this.src, 'lomba bola voli')">
                         </div>
                         <div class="lg:w-2/3">
                             <h3 class="text-xl sm:text-2xl font-bold mb-3 dark:text-white">Sekretaris & Koordinator
@@ -906,3 +906,4 @@
             }
         });
     </script>
+
