--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                     <div class="space-y-3 sm:space-y-4 mb-6">
                         <div class="flex items-center">
                             <i class="fas fa-envelope text-lg sm:text-xl mr-3 sm:mr-4"></i>
-                            <span class="text-sm sm:text-base">Basithtegal@gm.com</span>
+                            <span class="text-sm sm:text-base">Basithtegal@gmail.com</span>
                         </div>
                         <div class="flex items-center">
                             <i class="fas fa-phone text-lg sm:text-xl mr-3 sm:mr-4"></i>
@@ -1166,3 +1166,4 @@ Pesan ini dikirim melalui portfolio website Basith`;
     });
 });
 </script>
+
